--- a/app/src/main/res/layout/activity_tabela.xml
+++ b/app/src/main/res/layout/activity_tabela.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    tools:context="br.com.faesa.mochila.tabela.TabelaActivity">
+    tools:context=".tabela.TabelaActivity">
 
-    <ScrollView
+    <com.evrencoskun.tableview.TableView
+        android:id="@+id/tblTabela"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:row_header_width="@dimen/largura_celula"
+        app:column_header_height="@dimen/altura_celula"
+        android:layout_height="wrap_content"/>
 
-        <TableLayout
-            android:id="@+id/tblTabela"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-    </ScrollView>
-</HorizontalScrollView>
+</RelativeLayout>
